<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res/com.zes.dailyassistant"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
    <com.zes.dailyassistant.base.GeneralTitleBar 
        android:id="@+id/cloud_space_generalTitleBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:leftVisibility="invisible"
        app:rightText="@string/cloud_space_fragment_right"
        app:title="@string/cloud_space_fragment_title">
        
    </com.zes.dailyassistant.base.GeneralTitleBar>
    
    <ListView 
        android:id="@id/android:list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/cloud_space_generalTitleBar">
        
    </ListView>
    
    <TextView 
        android:id="@id/android:empty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/cloud_space_fragment_empty"/>

</RelativeLayout>
